--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -1,14 +1,17 @@
+@use "_variables.scss";
 @use "_settings.scss";
 @use "_fonts.scss";
 
 body {
   padding: 0;
   margin: 0;
-  //font-family: $ff;
+  font-family: var(--ff);
 }
-// #app {
-//   max-width: 1280px;
-//   margin: 0 auto;
-//   padding: 2rem;
-//   text-align: center;
-// }
+#app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  main {
+    flex-grow: 1;
+  }
+}
