--- a/src/assets/style/_settings.scss
+++ b/src/assets/style/_settings.scss
@@ -62,3 +62,9 @@ button {
 html {
   scroll-behavior: smooth;
 }
+[class*="__container"] {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
