--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -3,6 +3,7 @@
   --primary: #ffd37e;
   --darkSecondary: #1d1f76;
   --lightSecondary: #d7ebff;
+  --beige: #fff1d7;
   --gray: #e5e5e5;
   --tetxL: #2d2d2d;
 
@@ -11,6 +12,7 @@
 
   //*** Fonts ***
   --ff: "Lato", Arial, Helvetica, sans-serif;
+  --stetica: "Stetica", Arial, Helvetica, sans-serif;
 }
 
 //*** Font sizes ***
