--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -13,6 +13,7 @@
   //*** Fonts ***
   --ff: "Lato", Arial, Helvetica, sans-serif;
   --stetica: "Stetica", Arial, Helvetica, sans-serif;
+  --roboto: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 //*** Font sizes ***
