--- a/src/assets/style/_button.scss
+++ b/src/assets/style/_button.scss
@@ -27,12 +27,11 @@
     }
   }
   &.btn-light {
-    border-color: rgb(var(--primary));
-    &:hover {
-      @media (min-width: 1023px) {
-        background: rgba(var(--primary), 0.2);
-      }
-    }
+    background-color: rgb(var(--white));
+    width: 100%;
+    color: var(--darkSecondary);
+    font-weight: +700;
+    font-size: 14px;
   }
   &.btn-transparent {
     background-color: transparent;
