--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -5,7 +5,7 @@
   --lightSecondary: #d7ebff;
   --beige: #fff1d7;
   --gray: #e5e5e5;
-  --tetxL: #2d2d2d;
+  --text: #2d2d2d;
 
   --black: 0, 0, 0;
   --white: 255, 255, 255;
