--- a/src/assets/style/_settings.scss
+++ b/src/assets/style/_settings.scss
@@ -88,6 +88,9 @@ h2 {
   &--beige {
     background-color: var(--beige);
   }
+  &--primary {
+    background-color: var(--primary);
+  }
 }
 
 .block-head {
